@@ -1,5 +1,7 @@
 2008-11-03  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
+	* tests/winClipboard.test: testclipboard no longer returns strings
+	with embedded \r but now returns Tcl strings
 	* tests/winfo.test: fixed embedding test broken during upgrade
 	* tests/busy.test: default wait cursor on windows is 'wait'
 	* win/tkWinFont.c: const fixes for the windows code.
